// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageHeader /> component When used in detail page Should render a header element with display flex and correct given childrens 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: #FFFFFF;
  min-height: 228px;
  padding: 48px 32px 40px 32px;
  box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.1);
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  font-weight: 400;
  font-size: 2rem;
  line-height: 1.23;
  margin: 0;
  color: #151617;
}

.emotion-6 {
  max-width: 50vw;
  margin-top: 16px;
}

.emotion-8 {
  font-weight: 400;
  font-size: 1.125rem;
  line-height: 1.34;
  margin: 0;
  color: #4F4F4F;
}

.emotion-10 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
  gap: 20px;
}

.emotion-12 {
  border: 0;
  text-transform: uppercase;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.34;
  margin: 0;
  font-weight: 700;
  border-radius: 3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  white-space: nowrap;
  cursor: pointer;
  max-width: 20vw;
  padding: 0px 15px;
  height: 32px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: #FFFFFF;
  background-color: #0078D6;
}

.emotion-12:disabled {
  opacity: 0.4;
  cursor: default;
}

.emotion-12:disabled {
  pointer-events: none;
}

.emotion-12:hover {
  color: #FFFFFF;
  background-color: #01508E;
}

<div>
  <header
    class="emotion-0 emotion-1"
    data-testid="detail-page-header"
    direction="row"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <h1
        class="emotion-4 emotion-5"
        color="gray_300"
        data-testid="typography"
        style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
      >
        Detail Page Title
      </h1>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <p
        class="emotion-8 emotion-5"
        color="gray_200"
        data-testid="header-description"
      >
        Some optional Description
      </p>
    </div>
    <div
      class="emotion-10 emotion-3"
    >
      <button
        class="emotion-12 emotion-13"
        color="primary"
        data-testid="click-me-button"
      >
        Click Me
      </button>
    </div>
  </header>
</div>
`;

exports[`<PageHeader /> component When used in list page Should render a header element with display flex and correct given content 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-2 {
  font-weight: 700;
  font-size: 3rem;
  line-height: 1.23;
  margin: 0;
  color: #151617;
}

<div>
  <header
    class="emotion-0 emotion-1"
    data-testid="list-page-header"
    direction="row"
  >
    <h1
      class="emotion-2 emotion-3"
      color="gray_300"
      data-testid="typography"
      style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
    >
      Page Title
    </h1>
  </header>
</div>
`;
